[package]
name = "smlcrt"
version = "0.1.0"
authors = ["Till Klocke <till.klocke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smolcert = { path = "../smolcert-rust"}
clap = { version = "2.33" }
ed25519-dalek = {version="1.0.0-pre.3", features=["serde"]}
rand = "0.7"
chrono = "0.4"
