[package]
name = "smolcert"
version = "0.1.0"
authors = ["Till Klocke <till.klocke@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0" }
serde_cbor = {version="0.10", default-features=true}
rand = "0.7.2"
ed25519-dalek = {version="1.0.0-pre.3", features=["serde"]}
chrono = { version = "0.4", default-features=false }

[features]
default = ["std"]
std = []

